--- a/Memory Game/Memory Game/DifficultyWindow.xaml
+++ b/Memory Game/Memory Game/DifficultyWindow.xaml
@@ -71,7 +71,7 @@
             Grid.Column="2"
                 >
                 <TextBlock
-            Text="Start Game"
+            Text="New Game"
             FontSize="50"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Center" Margin="0,0,22,0"
