--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -34,7 +34,8 @@
             Style="{StaticResource RoundButtonTemplate}"
             BorderBrush="#fff"
             Name="Exit"
-            Content="Quit"
+            FontWeight="Bold"
+            Content="QUIT"
             Click="Exit_Click"
             MaxHeight="40px"
             MouseEnter="MyMouseEnterEvent"
@@ -54,7 +55,8 @@
             Style="{StaticResource RoundButtonTemplate}"
             BorderBrush="#fff"
             x:Name="Highscore"
-            Content="Highscores"
+            FontWeight="Bold"
+            Content="HIGHSCORES"
             Click="Highscore_Click"
             MaxHeight="40px"
             MouseEnter="MyMouseEnterEvent"
@@ -74,7 +76,8 @@
             Style="{StaticResource RoundButtonTemplate}"
             BorderBrush="#fff"
             x:Name="Rules"
-            Content="Rules"
+            FontWeight="Bold"
+            Content="RULES"
                   MaxHeight="40px"
             MouseEnter="MyMouseEnterEvent"
             MouseLeave="MyMouseLeavevEvent"
@@ -93,7 +96,8 @@
             Style="{StaticResource RoundButtonTemplate}"
             BorderBrush="#fff"
             x:Name="LoadGame"
-            Content="Load Game"
+            FontWeight="Bold"
+            Content="LOAD GAME"
             Click="LoadGameClick"
                   MaxHeight="40px"
             MouseEnter="MyMouseEnterEvent"
@@ -113,7 +117,8 @@
             Style="{StaticResource RoundButtonTemplate}"
             BorderBrush="#fff"
             x:Name="newGame"
-            Content="New Game"
+            FontWeight="Bold"
+            Content="NEW GAME"
             Click="NewGame_Click"
                   MaxHeight="40px"
             MouseEnter="MyMouseEnterEvent"
