--- a/Memory Game/Memory Game/GameWindow.xaml
+++ b/Memory Game/Memory Game/GameWindow.xaml
@@ -64,37 +64,41 @@
             <Button 
             Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" FontSize="24px"
             x:Name="Menu"
+                FontWeight="BOLD"
             Click="ButtonClickMenu"
             MouseEnter="MyMouseEnterEvent"
             MouseLeave="MyMouseLeaveEvent"
-            Content="Menu" Grid.Row="0" Grid.Column="9" Height="50"
+            Content="MENU" Grid.Row="0" Grid.Column="9" Height="50"
             Background="White" RenderTransformOrigin="0.98,0.575"
          />
             <Button 
             Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" FontSize="24px"
             x:Name="Reset"
+                FontWeight="BOLD"
             Click="ButtonClickReset"
             MouseEnter="MyMouseEnterEvent"
             MouseLeave="MyMouseLeaveEvent"
-            Content="Reset" Grid.Row="0" Grid.Column="10" Height="50"
+            Content="RESET" Grid.Row="0" Grid.Column="10" Height="50"
             Background="White" RenderTransformOrigin="0.98,0.575"
          />
             <Button 
             Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" FontSize="24px"
             x:Name="Save"
+            FontWeight="BOLD"
             Click="ButtonClickSave"
             MouseEnter="MyMouseEnterEvent"
             MouseLeave="MyMouseLeaveEvent"
-            Content="Save" Grid.Row="0" Grid.Column="8" Height="50"
+            Content="SAVE" Grid.Row="0" Grid.Column="8" Height="50"
             Background="White" RenderTransformOrigin="0.98,0.575"
          />
             <Button 
             Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" FontSize="24px"
             x:Name="Load"
+                FontWeight="BOLD"
             Click="ButtonClickLoad"
             MouseEnter="MyMouseEnterEvent"
             MouseLeave="MyMouseLeaveEvent"
-            Content="Load" Grid.Row="0" Grid.Column="7" Height="50"
+            Content="LOAD" Grid.Row="0" Grid.Column="7" Height="50"
             Background="White" RenderTransformOrigin="0.98,0.575" 
          />
         </Grid>
