--- a/Memory Game/Memory Game/DifficultyWindow.xaml
+++ b/Memory Game/Memory Game/DifficultyWindow.xaml
@@ -84,13 +84,13 @@
             <Label HorizontalAlignment="Center" FontWeight="Bold" FontSize="40" Content="Choose Difficulty" Grid.Column="2" Margin="52,282,50,247" Grid.RowSpan="2"/>
 
 
-            <Image Source="/img/2.png" Width="175" Height="175" Stretch="Fill" Grid.Column="3" Margin="112,175,353,10" Grid.Row="1">
+            <Image MouseDown="ImageClickHard" Source="/img/2.png" Width="175" Height="175" Stretch="Fill" Grid.Column="3" Margin="112,175,353,10" Grid.Row="1">
             </Image>
 
-            <Image Source="/img/4.png" Width="175" Height="175" Stretch="Fill" Margin="354,175,111,10" Grid.Row="1">
+            <Image MouseDown="ImageClickEasy" Source="/img/4.png" Width="175" Height="175" Stretch="Fill" Margin="354,175,111,10" Grid.Row="1">
             </Image>
 
-            <Image Source="/img/3.png" HorizontalAlignment="Center" Width="175" Height="175" Stretch="Fill"  Margin="231,175,232,10" Grid.Column="2"  Grid.Row="1">
+            <Image MouseDown="ImageClickMedium" Source="/img/3.png" HorizontalAlignment="Center" Width="175" Height="175" Stretch="Fill"  Margin="231,175,232,10" Grid.Column="2"  Grid.Row="1">
             </Image>
 
 
