--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -79,6 +79,7 @@
             FontWeight="Bold"
             Content="RULES"
                   MaxHeight="40px"
+            Click="Rules_Click"
             MouseEnter="MyMouseEnterEvent"
             MouseLeave="MyMouseLeavevEvent"
             Background="White" Margin="0.4,0.2,0,0.2" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="4"
