--- a/Memory Game/Memory Game/GameWindow.xaml
+++ b/Memory Game/Memory Game/GameWindow.xaml
@@ -79,7 +79,7 @@
             <Label x:Name="textTime" FontSize="22" Grid.Row="2" Grid.Column="3" Grid.RowSpan="2" HorizontalAlignment="Center" FontWeight="Bold">
                 2:36
             </Label>
-            <Label x:Name="textDifficulty" FontSize="20" Grid.Row="0" Grid.Column="5" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label x:Name="textDifficulty" FontWeight="Bold" FontSize="24" Grid.Row="0" Grid.Column="5" HorizontalAlignment="Center" VerticalAlignment="Center">
                 difficulty
             </Label>
             <Image x:Name="VolumeButton" Source="img/volume_button.png" Grid.Row="0" Grid.Column="6" 
