--- a/Memory Game/Memory Game/DifficultyWindow.xaml
+++ b/Memory Game/Memory Game/DifficultyWindow.xaml
@@ -9,8 +9,10 @@
         WindowState="Maximized"
         Width="1920"
         Height="1080"
-        Title="Difficulty" Background="#00FFE1" >
-
+        Title="Difficulty" >
+    <Window.Background>
+        <ImageBrush ImageSource="/img/Window_Backgrounds/bg_menu.png"/>
+    </Window.Background>
 
     <Viewbox>
         <Grid ShowGridLines="False" Height="1080" Width="1920" >
@@ -30,12 +32,12 @@
             </StackPanel>
 
 
-            <CheckBox HorizontalAlignment="Right" VerticalContentAlignment="Center"
+            <CheckBox FontWeight="Bold" Foreground="White" HorizontalAlignment="Right" VerticalContentAlignment="Center"
                 x:Name="Checkbox_Medium" Content="Medium" FontSize="30" Margin="0,33,256,144" RenderTransformOrigin="2.654,0.824" Grid.Column="2" Checked="CheckBox_Checked_Medium" Unchecked="Checkbox_Unchecked_Medium" Grid.Row="1"/>
-            <CheckBox HorizontalAlignment="Center" VerticalContentAlignment="Center"
-                x:Name="Checkbox_Hard" Content="Hard" FontSize="30" Margin="153,33,402,144" RenderTransformOrigin="2.654,0.824" Grid.Column="3" Checked="CheckBox_Checked_Hard" Unchecked="Checkbox_Unchecked_Hard"  Grid.Row="1"/>
-            <CheckBox HorizontalAlignment="Center" VerticalContentAlignment="Center" 
-                x:Name="Checkbox_Easy" Content="Easy" FontSize="30" Margin="390,33,172,144" RenderTransformOrigin="2.654,0.824" Grid.Row="1" Checked="CheckBox_Checked_Easy" Unchecked="Checkbox_Unchecked_Easy"/>
+            <CheckBox FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalContentAlignment="Center"
+                x:Name="Checkbox_Hard" Content="Hard" FontSize="30" Margin="153,33,353,144" RenderTransformOrigin="2.654,0.824" Grid.Column="3" Checked="CheckBox_Checked_Hard" Unchecked="Checkbox_Unchecked_Hard"  Grid.Row="1" Width="134"/>
+            <CheckBox FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalContentAlignment="Center" 
+                x:Name="Checkbox_Easy" Content="Easy" FontSize="30" Margin="390,33,111,144" RenderTransformOrigin="2.654,0.824" Grid.Row="1" Checked="CheckBox_Checked_Easy" Unchecked="Checkbox_Unchecked_Easy" Width="139"/>
 
 
 
@@ -81,7 +83,7 @@
                     />
             </Border>
 
-            <Label HorizontalAlignment="Center" FontWeight="Bold" FontSize="40" Content="Choose Difficulty" Grid.Column="2" Margin="52,282,50,247" Grid.RowSpan="2"/>
+            <Label Foreground="White" HorizontalAlignment="Center" FontWeight="Bold" FontSize="40" Content="Choose Difficulty" Grid.Column="2" Margin="52,282,50,247" Grid.RowSpan="2"/>
 
 
             <Image MouseDown="ImageClickHard" Source="/img/2.png" Width="175" Height="175" Stretch="Fill" Grid.Column="3" Margin="112,175,353,10" Grid.Row="1">
