--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -8,7 +8,10 @@
         WindowStyle="None"
         WindowState="Maximized"
         Title="MainWindow" Height="450" Width="800">
-    <Grid Background="#00FFE1">
+    <Window.Background>
+        <ImageBrush ImageSource="/img/Window_Backgrounds/bg_menu.png"/>
+    </Window.Background>
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="169*"/>
             <RowDefinition Height="1*"/>
