--- a/Memory Game/Memory Game/Rules.xaml
+++ b/Memory Game/Memory Game/Rules.xaml
@@ -10,8 +10,10 @@
         WindowState="Maximized" 
         Height="450" Width="800"
         MinHeight="400" MinWidth="650">
-
-    <Grid Background="	#00FFE1">
+    <Window.Background>
+        <ImageBrush ImageSource="/img/Window_Backgrounds/bg_menu.png"/>
+    </Window.Background>
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="64*"/>
             <ColumnDefinition Width="55*"/>
